# metadeps

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs  metadata.rs  test.rs
src/tests/: testlib-3.0.pc  testlib.pc
src/tests/toml-feature-not-string/: Cargo.toml
src/tests/toml-feature-versions/: Cargo.toml
src/tests/toml-good/: Cargo.toml
src/tests/toml-invalid-cfg/: Cargo.toml
src/tests/toml-not-table/: Cargo.toml
src/tests/toml-optional/: Cargo.toml
src/tests/toml-os-specific/: Cargo.toml
src/tests/toml-override-name/: Cargo.toml
src/tests/toml-two-libs/: Cargo.toml
src/tests/toml-unexpected-key/: Cargo.toml
src/tests/toml-version-in-table-not-string/: Cargo.toml
src/tests/toml-version-missing/: Cargo.toml
src/tests/toml-version-names/: Cargo.toml
src/tests/toml-version-not-string/: Cargo.toml
tests/: test.rs
tests/toml-feature-not-string/: Cargo.toml
tests/toml-feature-versions/: Cargo.toml
tests/toml-good/: Cargo.toml
tests/toml-override-name/: Cargo.toml
tests/toml-version-in-table-not-string/: Cargo.toml
tests/toml-version-missing/: Cargo.toml
