[package]
name = "system-deps"
version = "1.1.0"
authors = ["Guillaume Desmottes <guillaume.desmottes@collabora.com>", "Josh Triplett <josh@joshtriplett.org>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/gdesmott/system-deps"
description = "Run pkg-config from declarative dependencies in Cargo.toml"
keywords = ["pkg-config", "build-dependencies", "build-depends", "manifest", "metadata"]
edition = "2018"
documentation = "https://docs.rs/system-deps/"
readme = "README.md"

[dependencies]
pkg-config = "0.3.8"
toml = { version = "0.5", default-features = false }
version-compare = "0.0.10"
heck = "0.3"
strum = "0.18"
strum_macros = "0.18"
thiserror = "1"

[dev-dependencies]
lazy_static = "1"
