[package]
name = "system-deps"
version = "3.0.0"
authors = ["Guillaume Desmottes <guillaume.desmottes@collabora.com>", "Josh Triplett <josh@joshtriplett.org>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/gdesmott/system-deps"
description = "Discover and configure system dependencies from declarative dependencies in Cargo.toml"
keywords = ["pkg-config", "build-dependencies", "build-depends", "manifest", "metadata"]
edition = "2018"
documentation = "https://docs.rs/system-deps/"
readme = "README.md"

[dependencies]
pkg-config = "0.3"
toml = { version = "0.5", default-features = false }
version-compare = "0.0.11"
heck = "0.3"
strum = "0.20"
strum_macros = "0.20"
thiserror = "1"
anyhow = "1.0"
itertools = "0.10"

[dev-dependencies]
lazy_static = "1"
itertools = "0.10"
assert_matches = "1.5"